--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,7 @@ jobs:
      
    - name: Install Terraform 
      uses: hashicorp/setup-terraform@v2
-     with:
-      cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+     
    
    - name:  Terraorm ecr/s3 init
      id: init
@@ -65,7 +64,10 @@ jobs:
        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
      working-directory: ./ecr
-     run: terraform apply -auto-approve -input=false
+     run: |
+       terraform apply -auto-approve -input=false
+       terraform plan -destroy -out=ecr-s3-plan
+       
 
  
   build-image:
@@ -174,10 +176,12 @@ jobs:
         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ec2
-      run: terraform apply -auto-approve -input=false
+      run: |
+        terraform apply -auto-approve -input=false
+        terraform plan -destroy -out=ec2-plan
   
   alb:
-    name: deploy ec2 instance
+    name: deploy alb
     runs-on: ubuntu-latest
     needs: ec2
 
@@ -200,7 +204,7 @@ jobs:
         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./alb
-      run: terraform plan -input=false
+      run: terraform plan -input=false 
   
     - name: Terraform alb Apply  
       id: apply 
@@ -208,10 +212,13 @@ jobs:
         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./alb
-      run: terraform apply -auto-approve -input=false
+      run: |
+        terraform apply -auto-approve -input=false
+        terraform plan -destroy -out=alb-plan
+
 
   sleep:
-    name: deploy to s3
+    name: sleeping
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -224,7 +231,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: sleeping before destruction
-      run: sleep 600
+      run: sleep 10
     
     
   tf-destroy-alb:
@@ -237,21 +244,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name:  Terraorm alb init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./alb
-      run: terraform init
+    - uses: actions/upload-artifact@v3
+      with:
+        name: alb-plan
+        path: alb-plan
 
-    - name: Terraform alb plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./alb
-      run: terraform plan -input=false
   
     - name: Terraform alb destroy  
       id: destroy
@@ -259,7 +256,7 @@ jobs:
         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./alb
-      run: terraform destroy -auto-approve -input=false
+      run: terraform destroy -auto-approve alb-plan
 
   tf-destroy-ec2:
     name: destroy ec2 instance
@@ -270,6 +267,11 @@ jobs:
       # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
+
+    - uses: actions/upload-artifact@v3
+      with:
+        name: ec2-plan
+        path: ec2-plan
           
           
     - name: Install Terraform 
@@ -277,21 +279,6 @@ jobs:
       with:
           terraform_wrapper: false
 
-    - name:  Terraorm ec2 init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ec2
-      run: terraform init
-
-    - name: Terraform ec2 plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ec2
-      run: terraform plan -input=false
   
     - name: Terraform ec2 Destroy  
       id: apply 
@@ -299,7 +286,7 @@ jobs:
         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ec2
-      run: terraform destroy -auto-approve -input=false
+      run: terraform destroy -auto-approve -input=ec2-plan
 
   tf-destroy-ecr-s3:
     name: destroy "ecr/s3"
@@ -313,28 +300,17 @@ jobs:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
-      
+    
+    - uses: actions/upload-artifact@v3
+      with:
+        name: ecr-s3-plan
+        path: ecr-s3-plan
       
     - name: Install Terraform 
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_wrapper: false
     
-    - name:  Terraorm ecr/s3 init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ecr
-      run: terraform init
-      
-    - name: Terraform ecr/s3 plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ecr
-      run: terraform plan -input=false
     
     - name: Terraform destroy
       id: apply
@@ -342,4 +318,4 @@ jobs:
         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       working-directory: ./ecr
-      run: terraform destroy -auto-approve -input=false 
+      run: terraform destroy -auto-approve ecr-s3-plan 
