--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,231 +75,7 @@ jobs:
        
 
  
-  build-image:
-    name: "build and push"
-    runs-on: ubuntu-latest
-    needs: terraform-ecr-s3
-    
-    steps:
-    
-    - name: Checkout build
-      uses: actions/checkout@v3
-      
-      
-    - name: Configs AWS crdentails 
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-        aws-region: eu-central-1
-    
-    - name: login to ecr
-      id: login-ecr 
-      uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build Tag abd push images to Amazon ECR 
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: devone
-        IMAGE_TAG_JS: octo-nodejs
-      working-directory: ./node-app
-      run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_JS .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_JS
-  
-  change-content:
-    name: deploy to s3
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    needs: [terraform-ecr-s3, build-image]
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-    
-    - name: Configs AWS crdentails 
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-        aws-region: eu-central-1
-    
-    - name: login to ecr
-      id: login-ecr 
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: changing image names in docker-compose
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: devone
-        IMAGE_TAG_JS: octo-nodejs
-      working-directory: ./node-app/compose-app
-      run: |
-        sed -i  "0,/image:/ s/image:.*/image: $ECR_REGISTRY\/$ECR_REPOSITORY:$IMAGE_TAG_JS/" docker-compose.yaml
-        aws s3 cp docker-compose.yaml s3://octo-oren-bucket
-        aws s3 cp mongo-init.js s3://octo-oren-bucket
-            
-        
-  ec2:
-    name: deploy ec2 instance
-    runs-on: ubuntu-latest
-    needs: [change-content, terraform-ecr-s3]
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-         
-         
-    - name: Install Terraform 
-      uses: hashicorp/setup-terraform@v2
-      with:
-         terraform_wrapper: false
-
-    - name:  Terraorm ec2 init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ec2
-      run: terraform init
-
-    - name: Terraform ec2 plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ec2
-      run: terraform plan -input=false
-  
-    - name: Terraform ec2 Apply  
-      id: apply 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ec2
-      run: |
-        terraform apply -auto-approve -input=false
-        terraform plan -destroy -out /tmp/ec2-plan
-
-    - uses: actions/upload-artifact@v3
-      with:
-        name: ec2-plan
-        path: /tmp/ec2-plan
-  
-  alb:
-    name: deploy alb
-    runs-on: ubuntu-latest
-    needs: ec2
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name:  Terraorm alb init
-      id: init
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./alb
-      run: terraform init
-
-    - name: Terraform alb plan
-      id: plan 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./alb
-      run: terraform plan -input=false 
-  
-    - name: Terraform alb Apply  
-      id: apply 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./alb
-      run: |
-        terraform apply -auto-approve -input=false
-        terraform plan -destroy -out /tmp/alb-plan
-    
-    - uses: actions/upload-artifact@v3
-      with:
-        name: alb-plan
-        path: /tmp/alb-plan-art
-
-
-  sleep:
-    name: sleeping
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    needs: alb
-    
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: sleeping before destruction
-      run: sleep 10
-    
-    
-  tf-destroy-alb:
-    name: destroy alb
-    runs-on: ubuntu-latest
-    needs: sleep
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - uses: actions/download-artifact@v2
-      with:
-        name: alb-plan
-
-  
-    - name: Terraform alb destroy  
-      id: destroy
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./alb
-      run: terraform apply -auto-approve alb-plan
-
-  tf-destroy-ec2:
-    name: destroy ec2 instance
-    runs-on: ubuntu-latest
-    needs: [sleep, tf-destroy-alb]
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - uses: actions/download-artifact@v2
-      with:
-        name: my-artifact
-          
-          
-    - name: Install Terraform 
-      uses: hashicorp/setup-terraform@v2
-      with:
-          terraform_wrapper: false
-
-  
-    - name: Terraform ec2 Destroy  
-      id: apply 
-      env: 
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-      working-directory: ./ec2
-      run: terraform apply -auto-approve -input=ec2-plan
 
   tf-destroy-ecr-s3:
     name: destroy "ecr/s3"
@@ -307,7 +83,7 @@ jobs:
     #  defaults:
     #    run:
     #      shell: bash
-    needs: [sleep, tf-destroy-ec2]
+    needs: [terraform-ecr-s3]
         
     steps:
     # Checkout the repository to the GitHub Actions runner
